--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header img {
   width: 100%;
 }
+
 .header .more-inf {
   font-family: fantasy, cursive;
 }
@@ -24,29 +27,38 @@ body {
   }
 
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .new-task-input {
   display: flex;
 }
+
 ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+li, 
+h3 {
   list-style: none;
 }
-input,button {
+
+input,
+button {
   outline: none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -56,11 +68,14 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
-h3, label[for="new-task"] {
+h3, 
+label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -69,6 +84,7 @@ h3, label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -81,6 +97,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
@@ -90,9 +107,11 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task {
   width: 318px;
 }
+
 p > button:hover {
   color: #0FC57C;
 }
@@ -106,29 +125,36 @@ li {
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
+
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li > input[type="text"] {
   width: 226px;
 }
+
 li > .delete:hover {
   color: #CF2323;
 }
+
 .delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete img:hover {
   transform: rotateZ(0);
 }
@@ -143,10 +169,12 @@ li > .delete:hover {
 ul li input[type="text"] {
   display: none;
 }
+
 ul .edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
+
 ul .edit-mode label {
   display: none;
 }
