fix: adding acording to rule 1.2 and 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
 }
 
 header {
@@ -16,7 +16,7 @@ header img {
   width: 100%;
 }
 
-header .more-inf {
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -65,17 +65,17 @@ button {
   color: #888;
   font-size: 15px;
   width: 60px;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
   cursor: pointer;
 }
 
 button:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 
 /* Heading */
 h3, 
-label[for="new-task"] {
+[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,25 +85,25 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #ddd;
+  background: #fff;
   border-radius: 6px;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
   color: #888;
 }
 
-input[type="text"]:focus {
+[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -113,7 +113,7 @@ label[for="new-task"] {
 }
 
 button:hover {
-  color: #0FC57C;
+  color: #0fc57c;
 }
 
 /* Task list */
@@ -130,7 +130,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+li > [type="checkbox"] {
   margin: 0 10px;
 }
 
@@ -141,12 +141,12 @@ li > label {
   width: 226px;
 }
 
-li > input[type="text"] {
+li > [type="text"] {
   width: 226px;
 }
 
 li > .delete:hover {
-  color: #CF2323;
+  color: #cf2323;
 }
 
 .delete img {
@@ -166,11 +166,11 @@ li > .delete:hover {
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+ul li [type="text"] {
   display: none;
 }
 
-ul .edit-mode input[type="text"] {
+ul .edit-mode [type="text"] {
   display: inline-block;
   width: 224px;
 }
